# dataaemet

./: Dockerfile  README.md  aemet_api.py  compose.yaml  config.py  config.yaml  connector.py  deploy.bash  deploy_utils.bash  main.py  orchestrator.py  pyproject.toml  requirements.txt  staging.py  transformer.py  workflow.yaml
aemet_utils/: _init_.py  config.py  connector.py  sink.py  source.py
connector/: cmd.bash  config.py  config.yaml  main.py
connector/utils/: connector.py  locations.py  models.py  sink.py  source.py
orchestrator/: workflow.yaml
transformer/: workflow_settings.yaml
transformer/definitions/: data_staging.sqlx  process_weather_data.sqlx
